compiler/tests/err-return-void.err.expect
tests/err-return-void.c:2:12: error: void function cannot return a value
