compiler/tests/err-return-void.c
void helper() {
    return 42;
}

int main() {
    helper();
    return 0;
}
